--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -15,28 +15,28 @@
     <header><nav></nav></header>
     <main>
       <h1>Homepage</h1>
-      <section><h2>Hero section</h2></section>
-      <section><h2>Services section</h2></section>
+      <section><h2>We help you build your brand!</h2></section>
+      <section><h2>Services</h2></section>
       <section>
-        Works section
+        Works
         <article>Work 1</article>
         <article>Work 2</article>
         <article>Work 3</article>
       </section>
-      <section><h2>About section</h2></section>
+      <section><h2>About Us</h2></section>
       <section>
-        <h2>Latest news section</h2>
+        <h2>Latest news</h2>
         <article>Article 1</article>
         <article>Article 2</article>
         <article>Article 3</article>
       </section>
       <section>
-        <h2>Testimonials section</h2>
+        <h2>Testimonials</h2>
         <article>Testimonial 1</article>
         <article>Testimonial 2</article>
         <article>Testimonial 3</article>
       </section>
-      <section><h2>Contact section</h2></section>
+      <section><h2>Contact</h2></section>
     </main>
     <footer>Footer</footer>
   </body>
