--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -18,7 +18,7 @@
       <section><h2>We help you build your brand!</h2></section>
       <section><h2>Services</h2></section>
       <section>
-        Works
+        <h2>Works</h2>
         <article>Work 1</article>
         <article>Work 2</article>
         <article>Work 3</article>
