--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -11,20 +11,22 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="icon" type="image/png" href="./favicon.png" />
   </head>
+
   <body>
     <br />
     <!-- Header -->
     <header>
       <div>
         <div>
-          <a href="/"
-            ><img
+          <a href="/">
+            <img
               src="./logo-black.png"
-              width="160px"
-              height="40px"
               alt="Techium logo"
+              width="160"
+              height="40"
           /></a>
         </div>
+
         <nav>
           <ul>
             <li><a href="/">Home</a></li>
@@ -38,6 +40,7 @@
         </nav>
       </div>
     </header>
+
     <br />
     <!-- Main -->
     <main>
@@ -50,6 +53,7 @@
           <a href="#">Get started</a>
         </div>
       </section>
+
       <br />
       <!-- Services section -->
       <section>
@@ -68,6 +72,7 @@
           </div>
         </div>
       </section>
+
       <br />
       <!-- Works section -->
       <section>
@@ -79,25 +84,26 @@
           <div>
             <article>
               <div>
-                <img src="./images//pic-work-01.jpg" alt="" />
+                <img src="images/pic-work-01.jpg" alt="" />
               </div>
               <h3><a href="#">Interior Design</a></h3>
             </article>
             <article>
               <div>
-                <img src="./images//pic-work-02.jpg" alt="" />
+                <img src="images/pic-work-02.jpg" alt="" />
               </div>
               <h3><a href="#">Web Development</a></h3>
             </article>
             <article>
               <div>
-                <img src="./images//pic-work-03.jpg" alt="" />
+                <img src="images/pic-work-03.jpg" alt="" />
               </div>
               <h3><a href="#">Personal Brand</a></h3>
             </article>
           </div>
         </div>
       </section>
+
       <br />
       <!-- About Us section -->
       <section>
@@ -108,10 +114,10 @@
           </header>
           <div>
             <img
-              src="./images/pic-about-us.jpg"
+              src="images/pic-about-us.jpg"
               alt=""
-              width="460px"
-              height="447px"
+              width="460"
+              height="447"
             />
             <h3>Who are we</h3>
             <p>
@@ -138,6 +144,7 @@
           <a href="about.html">Learn more about us</a>
         </div>
       </section>
+
       <br />
       <!-- Latest news section -->
       <section>
@@ -149,10 +156,10 @@
             <article>
               <div>
                 <img
-                  src="./images/pic-blog-01.jpg"
+                  src="images/pic-blog-01.jpg"
                   alt=""
-                  width="305px"
-                  height="205px"
+                  width="305"
+                  height="205"
                 />
               </div>
               <p>Career</p>
@@ -167,10 +174,10 @@
             <article>
               <div>
                 <img
-                  src="./images/pic-blog-02.jpg"
+                  src="images/pic-blog-02.jpg"
                   alt=""
-                  width="305px"
-                  height="205px"
+                  width="305"
+                  height="205"
                 />
               </div>
               <p>Digital Life</p>
@@ -191,10 +198,10 @@
             <article>
               <div>
                 <img
-                  src="./images/pic-blog-03.jpg"
+                  src="images/pic-blog-03.jpg"
                   alt=""
-                  width="305px"
-                  height="205px"
+                  width="305"
+                  height="205"
                 />
               </div>
               <p>Social</p>
@@ -210,6 +217,7 @@
           </div>
         </div>
       </section>
+
       <br />
       <!-- Testimonials section -->
       <section>
@@ -221,7 +229,7 @@
           <div>
             <article>
               <img
-                src="./images/pic-person-01.jpg"
+                src="images/pic-person-01.jpg"
                 alt="Yuri Y. avatar"
                 width="100px"
                 height="100px"
@@ -229,14 +237,13 @@
               <blockquote>
                 <p>
                   I am completely blown away. Thanks to Techium, we've just
-                  launched our 5th website!
-                  <cite>Yuri Y.</cite>
+                  launched our 5th website! <cite>Yuri Y.</cite>
                 </p>
               </blockquote>
             </article>
             <article>
               <img
-                src="./images/pic-person-02.jpg"
+                src="images/pic-person-02.jpg"
                 alt="Dorrie S. avatar"
                 width="100px"
                 height="100px"
@@ -244,14 +251,13 @@
               <blockquote>
                 <p>
                   Thank you so much for your help. Techium company is awesome!
-
                   <cite>Dorrie S.</cite>
                 </p>
               </blockquote>
             </article>
             <article>
               <img
-                src="./images/pic-person-03.jpg"
+                src="images/pic-person-03.jpg"
                 alt="Sven H. avatar"
                 width="100px"
                 height="100px"
@@ -259,13 +265,14 @@
               <blockquote>
                 <p>
                   I love your system. Definitely worth the investment. I'd be
-                  lost without Techium company.<cite>Sven H.</cite>
+                  lost without Techium company. <cite>Sven H.</cite>
                 </p>
               </blockquote>
             </article>
           </div>
         </div>
       </section>
+
       <br />
       <!-- Contact section -->
       <section>
@@ -285,15 +292,11 @@
         </div>
       </section>
     </main>
+
     <br />
     <!-- Footer -->
     <footer>
-      <img
-        src="./logo-black.png"
-        alt="Techium logo"
-        width="160px"
-        height="40px"
-      />
+      <img src="/logo-black.png" alt="Techium logo" width="160" height="40" />
       <address>234 Washington Street <br />Urbana, Illinois</address>
       <div>
         <ul>
