--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -84,19 +84,19 @@
           <div>
             <article>
               <div>
-                <img src="images/pic-work-01.jpg" alt="" />
+                <img src="./images/pic-work-01.jpg" alt="" />
               </div>
               <h3><a href="#">Interior Design</a></h3>
             </article>
             <article>
               <div>
-                <img src="images/pic-work-02.jpg" alt="" />
+                <img src="./images/pic-work-02.jpg" alt="" />
               </div>
               <h3><a href="#">Web Development</a></h3>
             </article>
             <article>
               <div>
-                <img src="images/pic-work-03.jpg" alt="" />
+                <img src="./images/pic-work-03.jpg" alt="" />
               </div>
               <h3><a href="#">Personal Brand</a></h3>
             </article>
@@ -114,10 +114,10 @@
           </header>
           <div>
             <img
-              src="images/pic-about-us.jpg"
+              src="./images/pic-about-us.jpg"
               alt=""
-              width="460"
-              height="447"
+              width="460px"
+              height="447px"
             />
             <h3>Who are we</h3>
             <p>
@@ -156,10 +156,10 @@
             <article>
               <div>
                 <img
-                  src="images/pic-blog-01.jpg"
+                  src="./images/pic-blog-01.jpg"
                   alt=""
-                  width="305"
-                  height="205"
+                  width="305px"
+                  height="205px"
                 />
               </div>
               <p>Career</p>
@@ -174,10 +174,10 @@
             <article>
               <div>
                 <img
-                  src="images/pic-blog-02.jpg"
+                  src="./images/pic-blog-02.jpg"
                   alt=""
-                  width="305"
-                  height="205"
+                  width="305px"
+                  height="205px"
                 />
               </div>
               <p>Digital Life</p>
@@ -198,10 +198,10 @@
             <article>
               <div>
                 <img
-                  src="images/pic-blog-03.jpg"
+                  src="./images/pic-blog-03.jpg"
                   alt=""
-                  width="305"
-                  height="205"
+                  width="305px"
+                  height="205px"
                 />
               </div>
               <p>Social</p>
@@ -229,7 +229,7 @@
           <div>
             <article>
               <img
-                src="images/pic-person-01.jpg"
+                src="./images/pic-person-01.jpg"
                 alt="Yuri Y. avatar"
                 width="100px"
                 height="100px"
@@ -243,7 +243,7 @@
             </article>
             <article>
               <img
-                src="images/pic-person-02.jpg"
+                src="./images/pic-person-02.jpg"
                 alt="Dorrie S. avatar"
                 width="100px"
                 height="100px"
@@ -257,7 +257,7 @@
             </article>
             <article>
               <img
-                src="images/pic-person-03.jpg"
+                src="./images/pic-person-03.jpg"
                 alt="Sven H. avatar"
                 width="100px"
                 height="100px"
